makes mobile and tablet friendly

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 
             </div>
             <div class="grid-child second-and-third-column">
-                <div class="the-premise-image"></div>
+                <div class="image the-premise-image"></div>
             </div>
             <div class="grid-child first-and-fourth-column">
                 <div class="the-party">
@@ -67,7 +67,7 @@
                     <div class="time">6m read</div>
                 </div>
             </div>
-            <div class="the-party-questions">
+            <div class="grid-child the-party-questions">
                     <div class="question">
                         <div class="tag">Question 1</div>
                         <div class="title-small">How Did You Find the Monster’s Lair?</div>
@@ -109,7 +109,7 @@
                     <div class="time">2m read</div>
                 </div>
             </div>
-            <div class="the-monster">
+            <div class="grid-child the-monster">
                 <div class="tag">Setup</div>
                 <div class="title">The Monster</div>
                 <div class="time">2m read</div>
@@ -128,44 +128,44 @@
                     </p>
                 </div>
             </div>
-            <div class="second-and-third-column-lower">
-                <div class="the-monster-image"></div>
+            <div class="grid-child second-and-third-column-lower">
+                <div class="image the-monster-image"></div>
             </div>
-            <div class="fourth-column-lower">
+            <div class="grid-child fourth-column-lower">
                 <div class="tag">The Realm: Popular Today</div>
                 <div class="popular-article">
                     <div class="popular-text">
                         <div class="title-small">Look Inside a Recently Uncovered, 5,000 Year-Old Monastery</div>
                         <div class="time">3m read</div>
                     </div>
-                    <div class="popular-image" id="popular-image-1"></div>
+                    <div class="image popular-image" id="popular-image-1"></div>
                 </div>
                 <div class="popular-article">
                     <div class="popular-text">
                         <div class="title-small">The Battle of the Brigands: What Do We Really Know?</div>
                         <div class="time">4m read</div>
                     </div>
-                    <div class="popular-image" id="popular-image-2"></div>
+                    <div class="image popular-image" id="popular-image-2"></div>
                 </div>
                 <div class="popular-article">
                     <div class="popular-text">
                         <div class="title-small">Local Elections Take on New Significance Amid Borderlands Turmoil</div>
                         <div class="time">2m read</div>
                     </div>
-                    <div class="popular-image" id="popular-image-3"></div>
+                    <div class="image popular-image" id="popular-image-3"></div>
                 </div>
                 <div class="popular-article">
                     <div class="popular-text">
                         <div class="title-small">Extinct No More! Confirmed Sighting of Messer's Ribbed Lacerta the First in Decades</div>
                         <div class="time">5m read</div>
                     </div>
-                    <div class="popular-image" id="popular-image-4"></div>
+                    <div class="image popular-image" id="popular-image-4"></div>
                 </div>
             </div>
             <div class="grid-child first-and-fourth-column-lower">
                 <div class="the-story-top">
                     <div class="title">The Story</div>
-                    <div class="time">4m read</div>
+                    <div class="time">5m read</div>
                     <div class="body">
                         <p>Once the Monster has been defined and named, it’s time to start telling the story of how it was defeated! The game proceeds in 5 Phases, one Phase for each of the Chronicler’s questions. Each Phase begins when the Chronicler asks the associated question, and it’s up to them to decide when to move on to the next Phase.</p>
                         <p>After the Chronicler starts the Phase by asking the question, members of the Party have the opportunity to respond. During this section, talk in character and describe what you did in this part of the monster hunt. This section is built on the following key phrases:</p>
@@ -194,7 +194,7 @@
             <div class="tip body">
                 <p><bold>Got a Tip?</bold> Have you recently encountered Monsters or other Dungeon-related beasts in your town? Let us know. ></p>
             </div>
-            <div class="heroism-and-belief">
+            <div class="grid-child heroism-and-belief">
                 <div class="title">Heroism and Belief</div>
                 <div class="time">2m read</div>
                 <div class="body">
@@ -202,7 +202,7 @@
                     <p>The Chronicler can also choose to give the Party as a whole a Belief token by dropping it on the ground in front of the group. The Chronicler should only do so if they consider the story of this Phase to be believable. While the Party are fantasy adventurers capable of slaying a monster, they are not demigods. Whether or not the Chronicler believes the story is ultimately up to the player, but consider: Were the actions taken by the Party justified by their backgrounds, classes, or treasures? Were members of the party consistently arguing amongst themselves as to what happened during their adventure? Were members of the party able to answer your questions?</p>
                 </div>
             </div>
-            <div class="ending-the-game">
+            <div class="grid-child ending-the-game">
                 <div class="title">Ending the Game</div>
                 <div class="time">2m read</div>
                 <div class="body">
