adds icon and image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Boasts and Braggarts</title>
+        <link rel="icon" type="image/png" href="/boasts-and-braggarts/css/icon.jpg"/>
+        <meta property="og:title" content="Boasts and Braggarts"/>
+        <meta property="og:image" content="/boasts-and-braggarts/css/Michalina_Janoszanka.jpg"/>
         <link href="css/style.css" type="text/css" rel="stylesheet" /> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
