Adjusts menu font size

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="footer body">
-                <p>Made with in a land outside the Realm</p>
+                <p>Made in a land outside the Realm</p>
             </div>
         </div>
     </body>
